# taxafasta

./: .gitignore  Dockerfile  README.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/taxafasta/: __init__.py  __main__.py  cli.py  download.py  fasta.py  io_utils.py  run_log.py  taxonomy.py
tests/: conftest.py  test_cli.py  test_docker.py  test_download.py  test_fasta.py  test_integration.py  test_io_utils.py  test_run_log.py  test_smoke.py  test_taxonomy.py
tests/data/: sample.fasta
tests/data/tiny_taxdump/: merged.dmp  names.dmp  nodes.dmp
