[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taxafasta"
dynamic = ["version"]
description = "Filter UniProt FASTA files by NCBI taxonomy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
taxafasta = "taxafasta.cli:main"

[project.optional-dependencies]
fast = ["isal>=1.0"]
download = ["requests>=2.28"]
all = ["isal>=1.0", "requests>=2.28"]
dev = ["pytest", "pytest-cov", "pytest-benchmark", "mypy", "ruff"]

[tool.hatch.version]
path = "src/taxafasta/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/taxafasta"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
