[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "taxafasta"
dynamic = ["version"]
description = "Filter UniProt FASTA files by NCBI taxonomy"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
taxafasta = "taxafasta.cli:main"

[project.optional-dependencies]
fast = ["isal>=1.0"]
download = ["requests>=2.28"]
all = ["isal>=1.0", "requests>=2.28"]
dev = ["pytest", "pytest-cov", "pytest-benchmark", "mypy", "ruff"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/taxafasta/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/taxafasta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: smoke tests that require network access (deselect with '-m \"not smoke\"')",
]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
exclude = ["src/taxafasta/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
